# torchvision-customizer

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v2.1.md  paper.md  pyproject.toml  references.bib  requirements-dev.txt  requirements.txt  setup.py
docs/: _stubs.txt  conf.py  index.rst  installation.rst  introduction.rst  quick_start.rst  requirements.txt  user_guide.rst
docs/_static/: custom.css
docs/api/: blocks.rst  cli.rst  compose.rst  hybrid.rst  layers.rst  models.rst  recipe.rst  registry.rst  templates.rst  utils.rst
docs/development/: changelog.rst  contributing.rst  performance.rst  testing.rst
docs/examples/: advanced_patterns.rst  basic_usage.rst  custom_architectures.rst  hybrid_models.rst  transfer_learning.rst
docs/user_guide/: advanced.rst  basics.rst  blocks.rst  hybrid.rst  layers.rst  models.rst  templates.rst
examples/: activations_examples.py  advanced_architecture_examples.py  conv_block_examples.py  custom_cnn_examples.py  custom_from_scratch.yaml  efficientnet_custom.yaml  hybrid_model_examples.py  hybrid_resnet_se.yaml  model_summary_examples.py  pooling_examples.py  quick_train_example.py  residual_architecture_examples.py  residual_block_examples.py  train_cifar10.py  train_mnist.py
tests/: __init__.py  test_activations.py  test_advanced_architecture.py  test_all_blocks.py  test_blocks.py  test_custom_cnn.py  test_hybrid.py  test_pooling.py  test_residual_architecture.py  test_residual_block.py  test_trainer.py  test_utils.py
torchvision_customizer/: __init__.py  __version__.py  cli.py
torchvision_customizer/blocks/: __init__.py  advanced_architecture.py  advanced_blocks.py  bottleneck_block.py  conv3d_block.py  conv_block.py  depthwise_block.py  inception_module.py  residual_architecture.py  residual_block.py  se_block.py  super_conv2d.py  super_linear.py
torchvision_customizer/compose/: __init__.py  composer.py  head.py  operators.py  stage.py  stem.py
torchvision_customizer/hybrid/: __init__.py  builder.py  extractor.py  trainer.py  weight_utils.py
torchvision_customizer/layers/: __init__.py  activations.py  attention.py  normalizations.py  pooling.py
torchvision_customizer/models/: __init__.py  custom_cnn.py
torchvision_customizer/recipe/: __init__.py  builder.py  definition.py  parser.py  schema.py  yaml_loader.py
torchvision_customizer/registry/: __init__.py  component_registry.py
torchvision_customizer/templates/: __init__.py  base.py  densenet.py  efficientnet.py  mobilenet.py  resnet.py  vgg.py
torchvision_customizer/utils/: __init__.py  architecture_search.py  model_summary.py  validators.py
