[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchvision-customizer"
version = "2.1.0"
description = "A production-ready Python package for building highly customizable convolutional neural networks (CNNs) from scratch with an intuitive API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "codewithdark", email = "codewithdark90@gmail.com"}
]
keywords = [
    "deep-learning",
    "pytorch",
    "convolutional-neural-networks",
    "cnn",
    "computer-vision",
    "machine-learning",
    "customizable",
    "neural-architecture",
    "resnet",
    "vgg",
    "mobilenet"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.5.0",
    "torchvision>=0.24.1",
    "numpy>=2.3.4",
    "pyyaml>=6.0.3",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "pytest-xdist>=3.0.0",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.22.0",
]

[project.scripts]
tvc = "torchvision_customizer.cli:main"

[project.urls]
Homepage = "https://github.com/codewithdark-git/torchvision-customizer"
Repository = "https://github.com/codewithdark-git/torchvision-customizer.git"
"Bug Tracker" = "https://github.com/codewithdark-git/torchvision-customizer/issues"
Documentation = "https://torchvision-customizer.readthedocs.io"

[tool.setuptools]
packages = ["torchvision_customizer"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["torchvision_customizer"]
known_third_party = ["torch", "torchvision", "numpy", "yaml"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["torchvision_customizer"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
